--- a/SD.Allen.Frontend/v2.0/component/AppHomeTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/AppHomeTemplate.html
@@ -35,7 +35,7 @@
                             <ul class="dropdown-menu ss-dropdown-menu">
                                 <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
                                 <li><a href="Support Contacts.aspx" target="_blank">Support Contacts</a></li>
-                                <li><a href="#" target="_blank">Reports</a></li>
+                                <li><a href="javascript:void(0);" class="disabled ui-state-disabled">Reports</a></li>
                             </ul>
                         </li>
                         <li>
@@ -43,7 +43,7 @@
                             <ul class="dropdown-menu ss-dropdown-menu">
                                 <li><a href="SDSectionLoader.aspx?sid=0201" target="_blank">Create a new opportunity</a></li>
                                 <li><a href="SDMyOppty.aspx" target="_blank">My opportunities</a></li>
-                                <li><a href="SDAllOppty.aspx" target="_blank">All open opportunities</a></li>
+                                <li><a href="SDAllOppty.aspx" target="_blank">All opportunities</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -53,88 +53,77 @@
     </div>
 </nav>
 <div id="sd-section-content">
-    <ul class="nav nav-pills">
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution<br />Design</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <!-- ko foreach: opptyList-->
-                    <!-- ko if:$index() < 5 -->
-                    <li>
-                        <a target="_blank" data-bind="attr: {href: $component.urlPrefix+opptyId}, text: opptyId + ' ('+opptyName+')'">
-                        </a>
-                    </li>
-                    <!-- /ko -->
-                    <!-- /ko -->
-                    <li role="separator" class="divider"></li>
-                    <li><a href="SDMyOppty.aspx" target="_blank">My Opportunities</a></li>
-                    <li><a href="SDAllOppty.aspx" target="_blank">All Opportunities</a></li>
-                </ul>
-            </div>
+    <ul class="nav nav-pills ss-nav">
+        <li class="dropdown"> 
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Solution<br />Design</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu" role="menu">
+                <!-- ko if:opptyList() == undefined -->
+                <li>
+                    <img src="_layouts/15/images/loadingcirclests16.gif" />
+                </li>
+                <!-- /ko-->
+                <!-- ko foreach: opptyList-->                
+                <!-- ko if:$index() < 5 -->
+                <li>
+                    <a target="_blank" data-bind="attr: {href: $component.urlPrefix+opptyId}, text: opptyId + ' ('+opptyName+')'">
+                    </a>
+                </li>
+                <!-- /ko -->
+                <!-- /ko -->
+                <li role="separator" class="divider"></li>
+                <li><a href="SDMyOppty.aspx" target="_blank">My Opportunities</a></li>
+                <li><a href="SDAllOppty.aspx" target="_blank">All Opportunities</a></li>
+            </ul>            
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Configuration&nbsp;&amp;<br />Costing</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="http://c9w19663.itcs.hpecorp.net/PMD/" target="_blank">PMD</a></li>
-                    <li><a href="http://prime21.sharepoint.hp.com/teams/Apps%20Solutioning/Tools/SDT/SitePages/Home.aspx" target="_blank">SDT-Estimation, Configuration</a></li>
-                    <li><a href="http://kc-enterprise.sharepoint.hp.com/sites/kc7/general%20information%20restricted%20content/forms/folder%20view.aspx" target="_blank">ITO CMT</a></li>
-                    <li><a href="http://ent262.sharepoint.hp.com/teams/GSIDSPTPortal/Shared Documents/Forms/AllItems.aspx?RootFolder=%2Fteams%2FGSIDSPTPortal%2FShared%20Documents%2FMaster%20Tool%20List&FolderCTID=0x01200046CEC4FC70ADD248AFA8B5FF8A4ED602&View=%7b6E9304BE-EE36-4A96-AD7B-441606EC85AE%7d" target="_blank">ITO Cost Models (Master Tool List)</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Configuration&nbsp;&amp;<br />Costing</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="http://c9w19663.itcs.hpecorp.net/PMD/" target="_blank">PMD</a></li>
+                <li><a href="http://prime21.sharepoint.hp.com/teams/Apps%20Solutioning/Tools/SDT/SitePages/Home.aspx" target="_blank">SDT-Estimation, Configuration</a></li>
+                <li><a href="http://kc-enterprise.sharepoint.hp.com/sites/kc7/general%20information%20restricted%20content/forms/folder%20view.aspx" target="_blank">ITO CMT</a></li>
+                <li><a href="http://ent262.sharepoint.hp.com/teams/GSIDSPTPortal/Shared Documents/Forms/AllItems.aspx?RootFolder=%2Fteams%2FGSIDSPTPortal%2FShared%20Documents%2FMaster%20Tool%20List&FolderCTID=0x01200046CEC4FC70ADD248AFA8B5FF8A4ED602&View=%7b6E9304BE-EE36-4A96-AD7B-441606EC85AE%7d" target="_blank">ITO Cost Models (Master Tool List)</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pricing</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="http://ent71.sharepoint.hp.com/teams/E3T_1/public/home.aspx" target="_blank">E3T-Apps only</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Pricing</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="http://ent71.sharepoint.hp.com/teams/E3T_1/public/home.aspx" target="_blank">E3T-Apps only</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">
-                    Solution<br />Guides,<br />SOW<br />Templates
-                </a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=SolutionGuides" target="_blank">Solution Guide home page</a></li>
-                    <li><a href="http://kc-enterprise.sharepoint.hp.com/sites/kc12/default.aspx" target="_blank">kc12 SOW site</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown">
+                <div class="outlink">Solution<br />Guides,<br />SOW<br />Templates</div>
+            </a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=SolutionGuides" target="_blank">Solution Guide home page</a></li>
+                <li><a href="http://kc-enterprise.sharepoint.hp.com/sites/kc12/default.aspx" target="_blank">kc12 SOW site</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Review &amp; Approvals</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="https://ent301.sharepoint.hp.com/teams/GlobalDealTracker/SitePages/Home.aspx" target="_blank">GDT</a></li>
-                    <li><a href="https://www.soda.svcs.hpe.com/soto/web/landingpage" target="_blank">SODA</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Review &amp; Approvals</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="https://ent301.sharepoint.hp.com/teams/GlobalDealTracker/SitePages/Home.aspx" target="_blank">Global Deal Tracker</a></li>
+                <li><a href="https://www.soda.svcs.hpe.com/soto/web/landingpage" target="_blank">SODA</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Pursuit<br /> Workflow</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=PEP" target="_blank">PEP</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Pursuit<br /> Workflow</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=PEP" target="_blank">PEP</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Solution Development Methodology</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Documents/Pursuit_Support_Model/PSM_L0_Master.swf" target="_blank">PSM</a></li>
-                    <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=SalesSupportModel" target="_blank">SSM</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Solution Development Methodology</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Documents/Pursuit_Support_Model/PSM_L0_Master.swf" target="_blank">PSM</a></li>
+                <li><a href="http://intranet.hp.com/enterpriseservices/ww/SolutioningSalesSupport/Pages/page.aspx?n=n&q=SalesSupportModel" target="_blank">SSM</a></li>
+            </ul>
         </li>
-        <li>
-            <div class="outlink">
-                <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="true" aria-selected="false">Knowledge Management</a>
-                <ul class="dropdown-menu ss-dropdown-menu">
-                    <li><a href="https://grspro.itcs.hp.com/ius/" target="_blank">GRS</a></li>
-                </ul>
-            </div>
+        <li class="dropdown">
+            <a class="dropdown-toggle" role="button" data-toggle="dropdown"><div class="outlink">Knowledge Management</div></a>
+            <ul class="dropdown-menu ss-dropdown-menu">
+                <li><a href="https://grspro.itcs.hp.com/ius/" target="_blank">GRS</a></li>
+            </ul>
         </li>
     </ul>
 </div>
