--- a/SD.Allen.Frontend/v2.0/component/AttachmentManagerTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/AttachmentManagerTemplate.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-8">
             </div>
-            <!-- ko if: $component.editable()-->  
+            <!-- ko if: $component.editable()-->
             <div class="col-lg-2">
                 <p>
                     <a href="#" type="button" data-bind="click:$component.fileUploader.chooseFile()">
@@ -33,10 +33,11 @@
                     <div class="row">
                         <div class="col-lg-12 pull-left">
                             <ul data-bind='foreach:fileList' class="list-group pull-left">
-                                <li class="list-group-item list-unstyled"><span><img style="width: 16px; height: 16px; border: 0" data-bind="attr:{src:fileTag}" /></span>
+                                <li class="list-group-item list-unstyled">
+                                    <span><img style="width: 16px; height: 16px; border: 0" data-bind="attr:{src:fileTag}" /></span>
                                     <label data-bind='text:title' class="small"></label>
                                     &nbsp;|&nbsp;<a class="small" title="Dowload a copy" data-bind="attr:{href:fileUrl}" target="_blank"><span class="glyphicon glyphicon-download"></span></a>
-                                    &nbsp;|&nbsp;<a href="#" class="sd-attachment" title="Remove the attachment" fileName="" data-bind="attr:{id:'sd-file-'+$index()}"><span class="glyphicon glyphicon-remove small" ></span></a>
+                                    &nbsp;|&nbsp;<a href="#" class="sd-attachment" title="Remove the attachment" fileName="" data-bind="attr:{id:'sd-file-'+$index()}"><span class="glyphicon glyphicon-remove small"></span></a>
                                 </li>
                             </ul>
                         </div>
