--- a/SD.Allen.Frontend/v2.0/component/QuestionAreaTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/QuestionAreaTemplate.html
@@ -4,22 +4,25 @@
     <!-- ko if: title() != ''-->
     <div class="col-lg-12" data-bind="click:unfoldAnsw">
         <blockquote style="font-size:16px;font-weight:bolder;border-left:4px solid #00b388;">            
-            <span data-bind="text:title" style="cursor:pointer;"></span>&nbsp;&nbsp;            
+            <span data-bind="html:title" style="cursor:pointer;"></span>&nbsp;&nbsp;            
             <a><i class="glyphicon" data-bind="css:{'glyphicon-chevron-down':msupHandler(),'glyphicon-chevron-up':!msupHandler()}"></i></a>
         </blockquote>
     </div>
     <!-- /ko -->
+    <!-- ko if: title() != ''-->
     <div class="col-lg-12">
         <div class="sd-mce-container" data-bind="attr:{id: guid + '-container'}" style="margin-left:15px;"></div>
     </div>
-    <!-- ko if: title() != ''-->
     <div class="col-lg-12 col-md-6 col-xs-6" data-bind="css:{'hidden':!isStartEdit() || !answerVisible()}">
         <div data-bind="attr: {id: guid}, wysiwyg: content, wysiwygConfig: config" class="sd-fake-textarea" style="margin-left:15px;"></div>
     </div>
     <!-- /ko -->
     <!-- ko if: title() == ''-->
+    <div class="col-lg-12">
+        <div class="sd-mce-container" data-bind="attr:{id: guid + '-container'}"></div>
+    </div>
     <div class="col-lg-12 col-md-6 col-xs-6">
-        <div data-bind="attr: {id: guid}, wysiwyg: content, wysiwygConfig: config" class="sd-fake-textarea" style="margin-left:15px;"></div>
+        <div data-bind="attr: {id: guid}, wysiwyg: content, wysiwygConfig: config" class="sd-fake-textarea"></div>
     </div>
     <!-- /ko -->
     <div class="col-lg-12 hidden">
