--- a/SD.Allen.Frontend/v2.0/component/SectionLoaderTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/SectionLoaderTemplate.html
@@ -55,10 +55,10 @@
             <div class="row">
                 <div class="col-md-12" style="color:#fff">
                     <!--ko with:oppty-->
-                    <small>Opportunity ID: </small>
                     <small data-bind="text:$component.opptyID"></small>
-                    <small> | Opportunity Name:  </small>
-                    <small data-bind="text:OpptyName"></small>
+                    <!--ko if:OpptyName() != "" -->
+                    <small data-bind="text:' (' + OpptyName() + ')'"></small>
+                    <!--/ko-->
                     <!--/ko-->
                 </div>
             </div>
@@ -106,12 +106,12 @@
         </li>
         <!--ko if: opptyID() != ""-->
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Business and Solution Context <b class="caret"></b></a>
-            <ul class="dropdown-menu navmenu-nav">
-                <li><a href="#" data-bind="click: changeSection.bind($data, '0301')">Client Overview and Decision Factors</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Client Solution Strategy <b class="caret"></b></a>
+            <ul class="dropdown-menu navmenu-nav">                
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">HPE Win Strategy</a>
+                    <a href="#" class="dropdown-toggle">Client and Business Context</a>
                     <ul class="navmenu-nav">
+                        <li><a href="#" data-bind="click: changeSection.bind($data, '0301')">Client Overview and Decision Factors</a></li>
                         <li><a href="#" data-bind="click: changeSection.bind($data, '030201')">Sales Approach</a></li>
                         <li><a href="#" data-bind="click: changeSection.bind($data, '030202')">Competitors</a></li>
                         <li><a href="#" data-bind="click: changeSection.bind($data, '030203')">Message Map/Value Proposition</a></li>
@@ -123,33 +123,21 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solution Overview <b class="caret"></b></a>
             <ul class="dropdown-menu navmenu-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">Scope</a>
-                    <ul class="navmenu-nav">
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040101')">All Offerings</a></li>
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040102')">Key Scope Items </a></li>
-                    </ul>
-                </li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040101')">All Offerings</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040102')">Key Scope Items </a></li> 
                 <!-- ko if: pursuitClassfication() == 'C' || pursuitClassfication() == 'D' -->
                 <li><a href="#" data-bind="click: changeSection.bind($data, '0402')">Current State Architecture</a></li>
                 <!--/ko -->
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">Solution Approach</a>
-                    <ul class="navmenu-nav">
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040301')">Summary</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040302')">Outsourcing CMO/TMO/FMO</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040303')">HR Solution</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040304')">HPE Internal Challenges and Constraints</a></li>
 
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040301')">Summary</a></li>
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040302')">Outsourcing CMO/TMO/FMO</a></li>
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040303')">HR Solution</a></li>
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040304')">HPE Internal Challenges and Constraints</a></li>
-
-                        <!-- ko if:involvedGbu() == 'apps' && appsInscope() == true -->
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040305')">Design Parameters</a></li>
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040306')">Deployment Strategy</a></li>
-                        <!-- /ko -->
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040307')">Additional Information</a></li>
-
-                    </ul>
-                </li>
+                <!-- ko if:involvedGbu() == 'apps' && appsInscope() == true -->
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040305')">Design Parameters</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040306')">Deployment Strategy</a></li>
+                <!-- /ko -->
+                <li><a href="#" data-bind="click: changeSection.bind($data, '040307')">Additional Information</a></li>        
 
                 <li><a href="#" data-bind="click: changeSection.bind($data, '0404')">Innovative Aspects of the Solution</a></li>
                 <li class="dropdown">
@@ -160,12 +148,12 @@
                         <!-- ko if: pursuitClassfication() == 'C' || pursuitClassfication() == 'D' -->
                         <li><a href="#" data-bind="click: changeSection.bind($data, '040506')">Client-Retained Services Delivery Responsibility</a></li>
                         <!--/ko -->
-                        <li><a href="#" data-bind="click: changeSection.bind($data, '040503')">ESM Tooling and Automation Approach</a></li>
+                        <li><a href="#" data-bind="click: changeSection.bind($data, '040503')">Service Management & Integration Approach</a></li>
                     </ul>
                 </li>
                 <li><a href="#" data-bind="click: changeSection.bind($data, '0406')">Key Client Constraints</a></li>
                 <!-- ko if: pursuitClassfication() == 'C' || pursuitClassfication() == 'D' -->
-                <li><a href="#" data-bind="click: changeSection.bind($data, '0407')">Summary Costing &amp; FTE Reports-Costing Approach</a></li>
+                <li><a href="#" data-bind="click: changeSection.bind($data, '0407')">Summary Costing Approach</a></li>
                 <!--/ko -->
             </ul>
         </li>
