--- a/SD.Allen.Frontend/v2.0/component/TopLinkTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/TopLinkTemplate.html
@@ -27,7 +27,7 @@
                             <ul class="dropdown-menu sd-dropdown-menu">
                                 <li><a href="FAQ.aspx" target="_blank">FAQ</a></li>
                                 <li><a href="Support%20Contacts.aspx" target="_blank">Support Contacts</a></li>
-                                <li><a href="#" target="_blank">Reports</a></li>
+                                <li><a href="javascript:void(0);" class="disabled ui-state-disabled">Reports</a></li>
                             </ul>
                         </li>
                         <li>
