--- a/SD.Allen.Frontend/v2.0/component/SectionLoaderTemplate.html
+++ b/SD.Allen.Frontend/v2.0/component/SectionLoaderTemplate.html
@@ -242,5 +242,34 @@
     <sd-section-0407 params="{viewModel: $component}"></sd-section-0407>
     <!--/ko-->
 
-
+    <!--ko if: sid() === '0701'-->
+    <sd-section-0701 params="{viewModel: $component}"></sd-section-0701>
+    <!--/ko-->
+    <!--ko if: sid() === '0702'-->
+    <sd-section-0702 params="{viewModel: $component}"></sd-section-0702>
+    <!--/ko-->
+    <!--ko if: sid() === '0703'-->
+    <sd-section-0703 params="{viewModel: $component}"></sd-section-0703>
+    <!--/ko-->
+    <!--ko if: sid() === '0704'-->
+    <sd-section-0704 params="{viewModel: $component}"></sd-section-0704>
+    <!--/ko-->
+    <!--ko if: sid() === '0705'-->
+    <sd-section-0705 params="{viewModel: $component}"></sd-section-0705>
+    <!--/ko-->
+    <!--ko if: sid() === '0706'-->
+    <sd-section-0706 params="{viewModel: $component}"></sd-section-0706>
+    <!--/ko-->
+    <!--ko if: sid() === '0707'-->
+    <sd-section-0707 params="{viewModel: $component}"></sd-section-0707>
+    <!--/ko-->
+    <!--ko if: sid() === '0801'-->
+    <sd-section-0801 params="{viewModel: $component}"></sd-section-0801>
+    <!--/ko-->
+    <!--ko if: sid() === '0802'-->
+    <sd-section-0802 params="{viewModel: $component}"></sd-section-0802>
+    <!--/ko-->
+    <!--ko if: sid() === '0803'-->
+    <sd-section-0803 params="{viewModel: $component}"></sd-section-0803>
+    <!--/ko-->
 </div>
